# serializer version: 1
# name: test_compile_fix_disallowed_import
  dict({
    'fixed_code': '''
      import json
      import re
      import math
      import hashlib
      import collections
      import dataclasses
      import typing
      import datetime
      import textwrap
      import sqlite3
      import chromadb
      from dataclasses import dataclass, field
      
      
      @dataclass
      class Observation:
          raw: str = field(metadata={"description": "The raw text observation to store in memory"})
      
      
      @dataclass
      class Query:
          raw: str = field(metadata={"description": "The raw text query to search memory with"})
      
      
      class Memory:
          def __init__(self, toolkit):
              self.toolkit = toolkit
              self.store = []
      
          def write(self, observation: Observation) -> None:
              self.store.append(observation.raw)
              self.toolkit.logger.debug(f"Stored: {observation.raw[:80]}")
      
          def read(self, query: Query) -> str:
              return "\n".join(self.store) if self.store else "No information stored."
    ''',
    'original_error_details': 'Disallowed import: numpy',
    'original_error_type': 'Import whitelist violation',
  })
# ---
# name: test_compile_fix_runtime_bug
  dict({
    'fixed_code': '''
      from dataclasses import dataclass, field
      from typing import Optional, List
      import json
      import re
      import math
      import hashlib
      import collections
      import datetime
      import textwrap
      import sqlite3
      import chromadb
      
      
      @dataclass
      class Observation:
          raw: str = field(metadata={"description": "The raw text observation to store in memory"})
      
      @dataclass
      class Query:
          raw: str = field(metadata={"description": "The raw text query to search memory with"})
      
      class Memory:
          def __init__(self, toolkit):
              self.toolkit = toolkit
              self.store = []
      
          def write(self, observation: Observation) -> None:
              processed = self._process_text(observation.raw)
              self.store.append(processed)
      
          def read(self, query: Query) -> str:
              return "\n".join(self.store) if self.store else "No information stored."
      
          def _process_text(self, text: str) -> str:
              """Simple text processing for storage."""
              return text.strip()
    ''',
    'original_smoke_error': "Runtime: name 'process_text' is not defined",
  })
# ---
# name: test_end_to_end_offline
  dict({
    'first_output': 'Based on the retrieved memory, the capital of France is Paris.',
    'num_failed': 0,
    'num_outputs': 1,
    'score': 1.0,
  })
# ---
# name: test_end_to_end_online
  dict({
    'logs': list([
      'Val score: 1.000 (1 cases)',
    ]),
    'num_failed': 0,
    'num_outputs': 1,
    'score': 1.0,
    'val_output': '''
      Based on the retrieved memory, Alice prefers apples and her favorite color is green.
      
      Therefore, between the options:
      - green apple
      - red apple  
      - green banana
      - dragon fruit
      
      Alice would pick the **green apple**.
    ''',
  })
# ---
# name: test_observation_generation
  dict({
    'output': '{"raw": "The capital of France is Paris."}',
    'prompt': '''
      Given the following text, create an Observation object to store this information in memory.
      
      Text: The capital of France is Paris.
      
      The Observation must conform to this schema:
      // Observation: Raw text observation to store in memory.
      {
        "raw": "..."  // str, The raw text to store
      }
      
      Output ONLY a valid JSON object matching the schema fields. No explanation.
    ''',
  })
# ---
# name: test_observation_with_feedback
  dict({
    'output': '''
      {
        "raw": "Failed to correctly identify the capital of France. The answer given was evaluated as incorrect (Score: 0.0), with the correct answer being Paris."
      }
    ''',
    'prompt': '''
      Evaluation result: Score: 0.0 (incorrect)
      Ground truth: Paris
      
      Based on this feedback, generate an observation to write into memory.
      
      The observation must be a JSON object matching this schema:
      // Observation: Raw text observation to store in memory.
      {
        "raw": "..."  // str, The raw text to store
      }
      
      Respond with the JSON only.
    ''',
  })
# ---
# name: test_query_generation
  dict({
    'output': '''
      ```json
      {
          "raw": "capital of France"
      }
      ```
    ''',
    'prompt': '''
      Given the following question, generate a query to retrieve relevant memory.
      
      Question: What is the capital of France?
      
      The query must be a JSON object matching this schema:
      // Query: Raw text query to retrieve from memory.
      {
        "raw": "..."  // str, The query text to search for
      }
      
      Respond with the JSON only.
    ''',
  })
# ---
# name: test_reflection
  dict({
    'output': '''
      ## Diagnosis
      
      The current Memory Program has several critical issues:
      
      1. **No persistent storage**: The memory uses `self.store = []` which resets on each new instance. This means:
         - Observations aren't persisted across conversations
         - The system can't answer questions about previously stored information
      
      2. **No semantic search**: The `read()` method simply returns all stored text concatenated, with no relevance filtering based on the query.
      
      3. **No structured information extraction**: The Observation only stores raw text, making it impossible to query specific attributes (like "capital of France").
      
      4. **No use of provided toolkit**: The program doesn't use `toolkit.db` (SQLite) or `toolkit.chroma` (vector database) for persistent, searchable storage.
      
      5. **Truncated responses**: The `[:1000]` truncation loses information and doesn't help with relevance.
      
      ## Specific Improvements Needed
      
      1. **Use SQLite for persistent storage**: Create a table to store observations with timestamps.
      2. **Extract structured information**: Enhance Observation to capture entities and facts.
      3. **Implement semantic search**: Use ChromaDB to store embeddings and find relevant information.
      4. **Add relevance filtering**: Only return information relevant to the query.
      5. **Use LLM for information extraction**: Extract structured facts from raw text.
      
      ## Fixed Code
      
      ```python
      from dataclasses import dataclass, field
      from typing import Optional, List
      import json
      import sqlite3
      from datetime import datetime
      
      
      @dataclass
      class Observation:
          """Structured observation to store in memory."""
          raw: str = field(metadata={"description": "The raw text observation"})
          entities: List[str] = field(default_factory=list, metadata={"description": "Key entities mentioned (people, places, things)"})
          facts: List[str] = field(default_factory=list, metadata={"description": "Specific facts extracted from the text"})
          category: Optional[str] = field(default=None, metadata={"description": "Category of information (e.g., geography, history, personal)"})
      
      
      @dataclass
      class Query:
          """Query for retrieving information from memory."""
          question: str = field(metadata={"description": "The question to answer"})
          context: Optional[str] = field(default=None, metadata={"description": "Additional context for the query"})
          require_freshness: bool = field(default=False, metadata={"description": "Whether to prioritize recent information"})
      
      
      class Memory:
          """Memory system with persistent storage and semantic search."""
      
          def __init__(self, toolkit):
              self.toolkit = toolkit
              self.setup_database()
              self.setup_vector_store()
              
          def setup_database(self):
              """Initialize SQLite database for structured storage."""
              cursor = self.toolkit.db.cursor()
              cursor.execute("""
                  CREATE TABLE IF NOT EXISTS observations (
                      id INTEGER PRIMARY KEY AUTOINCREMENT,
                      raw_text TEXT NOT NULL,
                      entities_json TEXT,
                      facts_json TEXT,
                      category TEXT,
                      timestamp DATETIME DEFAULT CURRENT_TIMESTAMP
                  )
              """)
              self.toolkit.db.commit()
              self.toolkit.logger.debug("Database setup complete")
              
          def setup_vector_store(self):
              """Initialize ChromaDB collection for semantic search."""
              try:
                  self.collection = self.toolkit.chroma.create_collection(
                      name="memory_embeddings",
                      metadata={"hnsw:space": "cosine"}
                  )
                  self.toolkit.logger.debug("ChromaDB collection created")
              except:
                  # Collection might already exist
                  self.collection = self.toolkit.chroma.get_collection("memory_embeddings")
                  self.toolkit.logger.debug("Using existing ChromaDB collection")
          
          def extract_structured_info(self, raw_text: str) -> dict:
              """Use LLM to extract structured information from raw text."""
              prompt = f"""
              Extract structured information from this text:
              
              Text: "{raw_text}"
              
              Return a JSON object with:
              1. "entities": list of key entities mentioned (people, places, things)
              2. "facts": list of specific facts stated
              3. "category": one of [geography, history, science, personal, other]
              
              Example:
              Input: "Paris is the capital of France."
              Output: {{"entities": ["Paris", "France"], "facts": ["Paris is capital of France"], "category": "geography"}}
              """
              
              try:
                  response = self.toolkit.llm_completion([
                      {"role": "system", "content": "You are a precise information extractor. Return only valid JSON."},
                      {"role": "user", "content": prompt}
                  ])
                  
                  # Parse JSON response
                  result = json.loads(response.strip())
                  return {
                      "entities": result.get("entities", []),
                      "facts": result.get("facts", []),
                      "category": result.get("category", "other")
                  }
              except Exception as e:
                  self.toolkit.logger.debug(f"LLM extraction failed: {e}, using fallback")
                  # Fallback: simple keyword extraction
                  words = raw_text.lower().split()
                  important_words = [w for w in words if len(w) > 3 and w not in ["that", "this", "with", "from"]]
                  return {
                      "entities": important_words[:5],
                      "facts": [raw_text[:100]] if raw_text else [],
                      "category": "other"
                  }
          
          def write(self, observation: Observation) -> None:
              """Store observation with structured extraction and embeddings."""
              
              # Extract structured information if not provided
              if not observation.entities or not observation.facts:
                  extracted = self.extract_structured_info(observation.raw)
                  if not observation.entities:
                      observation.entities = extracted["entities"]
                  if not observation.facts:
                      observation.facts = extracted["facts"]
                  if not observation.category:
                      observation.category = extracted["category"]
              
              # Store in SQLite
              cursor = self.toolkit.db.cursor()
              cursor.execute("""
                  INSERT INTO observations (raw_text, entities_json, facts_json, category)
                  VALUES (?, ?, ?, ?)
              """, (
                  observation.raw,
                  json.dumps(observation.entities),
                  json.dumps(observation.facts),
                  observation.category
              ))
              obs_id = cursor.lastrowid
              self.toolkit.db.commit()
              
              # Store embedding in ChromaDB
              try:
                  self.collection.add(
                      documents=[observation.raw],
                      metadatas=[{
                          "id": obs_id,
                          "category": observation.category or "other",
                          "timestamp": datetime.now().isoformat()
                      }],
                      ids=[str(obs_id)]
                  )
              except Exception as e:
                  self.toolkit.logger.debug(f"ChromaDB write failed: {e}")
              
              self.toolkit.logger.debug(f"Stored observation {obs_id}: {observation.raw[:50]}...")
          
          def read(self, query: Query) -> str:
              """Retrieve relevant information based on query."""
              self.toolkit.logger.debug(f"Processing query: {query.question}")
              
              # Search for relevant observations
              relevant_obs = self.search_observations(query)
              
              if not relevant_obs:
                  return "I don't have information about that."
              
              # Format response
              if len(relevant_obs) == 1:
                  return relevant_obs[0]["raw_text"]
              else:
                  # Combine most relevant information
                  facts = []
                  for obs in relevant_obs[:3]:  # Top 3 most relevant
                      obs_facts = json.loads(obs["facts_json"])
                      if obs_facts:
                          facts.extend(obs_facts[:2])  # Take up to 2 facts per observation
                  
                  if facts:
                      return ". ".join(facts) + "."
                  else:
                      return relevant_obs[0]["raw_text"]
          
          def search_observations(self, query: Query) -> list:
              """Search for observations relevant to the query."""
              results = []
              
              # 1. Try semantic search with ChromaDB
              try:
                  chroma_results = self.collection.query(
                      query_texts=[query.question],
                      n_results=5
                  )
                  
                  if chroma_results and chroma_results["ids"]:
                      obs_ids = [int(id_str) for id_str in chroma_results["ids"][0]]
                      
                      # Fetch full records from SQLite
                      placeholders = ",".join("?" * len(obs_ids))
                      cursor = self.toolkit.db.cursor()
                      cursor.execute(f"""
                          SELECT * FROM observations 
                          WHERE id IN ({placeholders})
                          ORDER BY timestamp DESC
                      """, obs_ids)
                      
                      results = []
                      for row in cursor.fetchall():
                          results.append({
                              "id": row[0],
                              "raw_text": row[1],
                              "entities_json": row[2],
                              "facts_json": row[3],
                              "category": row[4],
                              "timestamp": row[5]
                          })
                      
                      self.toolkit.logger.debug(f"Found {len(results)} results via semantic search")
                      return results
              except Exception as e:
                  self.toolkit.logger.debug(f"Semantic search failed: {e}")
              
              # 2. Fallback: keyword search in SQLite
              cursor = self.toolkit.db.cursor()
              
              # Extract keywords from query
              keywords = [word.lower() for word in query.question.split() 
                         if len(word) > 3 and word.isalpha()]
              
              if keywords:
                  # Search in raw text and entities
                  conditions = []
                  params = []
                  for kw in keywords[:3]:  # Use top 3 keywords
                      conditions.append("(raw_text LIKE ? OR entities_json LIKE ?)")
                      params.extend([f"%{kw}%", f"%{kw}%"])
                  
                  where_clause = " OR ".join(conditions)
                  cursor.execute(f"""
                      SELECT * FROM observations 
                      WHERE {where_clause}
                      ORDER BY timestamp DESC
                      LIMIT 5
                  """, params)
              else:
                  # No keywords, return most recent
                  cursor.execute("""
                      SELECT * FROM observations 
                      ORDER BY timestamp DESC
                      LIMIT 3
                  """)
              
              results = []
              for row in cursor.fetchall():
                  results.append({
                      "id": row[0],
                      "raw_text": row[1],
                      "entities_json": row[2],
                      "facts_json": row[3],
                      "category": row[4],
                      "timestamp": row[5]
                  })
              
              self.toolkit.logger.debug(f"Found {len(results)} results via keyword search")
              return results
      ```
      
      ## Key Improvements Made
      
      1. **Persistent storage**: Uses SQLite to store observations across sessions.
      2. **Structured information extraction**: Observation now includes entities, facts, and categories.
      3. **Semantic search**: Uses ChromaDB for vector similarity search.
      4. **Relevance filtering**: Only returns information relevant to the query.
      5. **LLM integration**: Uses the toolkit's LLM to extract structured facts from raw text.
      6. **Fallback mechanisms**: If semantic search fails, falls back to keyword search.
      
      This implementation should handle the failed case by:
      - Persistently storing information about "Paris is the capital of France"
      - Finding relevant information when asked "What is the capital of France?"
      - Returning the specific fact rather than "I don't know"
    ''',
    'prompt': '''
      You are an expert Python programmer specializing in memory system design.
      
      Your task: Given a Memory Program (Python code defining Observation, Query, and Memory classes), its evaluation score, and failed cases, diagnose the issues and fix them.
      
      You are designing a Memory Program that implements three classes:
      
      1. **Observation** (dataclass): Defines what information is captured when writing to memory.
         - Must be a @dataclass with typed fields
         - An external LLM will populate instances by generating JSON matching your field definitions
         - **Field types MUST be JSON-compatible**: use only str, int, float, bool, list[str], Optional[str]
         - Do NOT use datetime, tuple, bytes, or custom objects — JSON cannot represent them
         - Use `field(metadata={"description": "..."})` to describe fields — descriptions are shown to the LLM that populates instances
      
      2. **Query** (dataclass): Defines what parameters are used when reading from memory.
         - Must be a @dataclass with typed fields
         - An external LLM will populate instances by generating JSON matching your field definitions
         - Same JSON-compatible type restriction and field description support as Observation
      
      3. **Memory** (class): The core memory system.
         - `__init__(self, toolkit)`: Receives a Toolkit with:
           - `toolkit.db`: sqlite3.Connection (in-memory SQLite)
           - `toolkit.chroma`: chromadb ephemeral client
           - `toolkit.llm_completion(messages, **kwargs) -> str`: LLM calls (budget-limited)
           - `toolkit.logger.debug(message)`: Debug logging (use liberally — logs are visible during diagnosis and help guide future fixes)
         - `write(self, observation: Observation) -> None`: Store information
         - `read(self, query: Query) -> str`: Retrieve relevant information as a string
      
      Allowed imports: json, re, math, hashlib, collections, dataclasses, typing, datetime, textwrap, sqlite3, chromadb
      
      
      ## Rules
      1. Output your diagnosis first, then the complete fixed code in a ```python``` block.
      2. The code must define exactly three classes: Observation, Query, Memory.
      3. Memory.__init__ must accept `toolkit`; write takes an Observation; read takes a Query and returns str.
      4. Keep it simple. Make minimal, targeted fixes — do not rewrite working parts.
      
      ## Current Memory Program (iteration 1)
      
      ```python
      from dataclasses import dataclass, field
      
      
      @dataclass
      class Observation:
          """Raw text observation to store in memory."""
          raw: str = field(metadata={"description": "The raw text to store"})
      
      
      @dataclass
      class Query:
          """Raw text query to retrieve from memory."""
          raw: str = field(metadata={"description": "The query text to search for"})
      
      
      class Memory:
          """Simple append-all / return-all memory."""
      
          def __init__(self, toolkit):
              self.toolkit = toolkit
              self.store: list[str] = []
      
          def write(self, observation: Observation) -> None:
              self.store.append(observation.raw)
              self.toolkit.logger.debug(f"Stored: {observation.raw}")
      
          def read(self, query: Query) -> str:
              self.toolkit.logger.debug(f"Query: {query.raw}, store size: {len(self.store)}")
              if not self.store:
                  return "No information stored."
              result = "\n".join(self.store)
              return result[:1000]
      
      ```
      
      ## Evaluation Score: 0.300
      
      ## Failed Cases
      
      ### Failed Case 1
      Question: What is the capital of France?
      Expected: Paris
      Got: I don't know
      Score: 0.0
      Conversation:
        [user]: What is the capital of France?
        [assistant]: I don't know
      Memory logs:
        - Query: what is the capital of france, store size: 0
      
      
      ## Task
      1. Diagnose why these cases fail.
      2. Propose specific improvements to the Memory Program.
      3. Output the complete improved code in a ```python``` block.
    ''',
  })
# ---
# name: test_reflection_recovery
  dict({
    'reflected_code': '''
      from dataclasses import dataclass, field
      from typing import Optional, List
      import sqlite3
      import re
      
      
      @dataclass
      class Observation:
          """Observation to store in memory with structured fields."""
          content: str = field(metadata={"description": "The main content or fact to remember"})
          topic: Optional[str] = field(default=None, metadata={"description": "Topic or subject category (optional)"})
          tags: List[str] = field(default_factory=list, metadata={"description": "Keywords for retrieval"})
      
      
      @dataclass
      class Query:
          """Query to retrieve from memory with search parameters."""
          question: str = field(metadata={"description": "The question or information need"})
          keywords: List[str] = field(default_factory=list, metadata={"description": "Keywords to match against stored content"})
      
      
      class Memory:
          """Memory system using SQLite for storage and basic keyword matching."""
      
          def __init__(self, toolkit):
              self.toolkit = toolkit
              self.db = toolkit.db
              
              # Create table for observations
              self.db.execute("""
                  CREATE TABLE IF NOT EXISTS observations (
                      id INTEGER PRIMARY KEY AUTOINCREMENT,
                      content TEXT NOT NULL,
                      topic TEXT,
                      tags TEXT,
                      created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
                  )
              """)
              
              # Create index for faster searches
              self.db.execute("CREATE INDEX IF NOT EXISTS idx_content ON observations(content)")
              self.db.execute("CREATE INDEX IF NOT EXISTS idx_topic ON observations(topic)")
              
              self.toolkit.logger.debug("Memory system initialized with SQLite storage")
      
          def write(self, observation: Observation) -> None:
              """Store an observation in memory."""
              # Convert tags list to comma-separated string for storage
              tags_str = ",".join(observation.tags) if observation.tags else ""
              
              self.db.execute(
                  "INSERT INTO observations (content, topic, tags) VALUES (?, ?, ?)",
                  (observation.content, observation.topic, tags_str)
              )
              self.db.commit()
              
              self.toolkit.logger.debug(f"Stored observation: {observation.content[:80]}...")
      
          def read(self, query: Query) -> str:
              """Retrieve relevant information based on query."""
              self.toolkit.logger.debug(f"Query received: {query.question[:80]}...")
              
              # Extract keywords from query if not provided
              keywords = query.keywords if query.keywords else self._extract_keywords(query.question)
              
              # Search for relevant observations
              results = self._search_memory(keywords, query.question)
              
              if not results:
                  return "No relevant information found."
              
              # Format results for return
              return self._format_results(results)
      
          def _extract_keywords(self, text: str) -> List[str]:
              """Extract potential keywords from text."""
              # Simple keyword extraction: remove common words, split by non-alphanumeric
              common_words = {"the", "a", "an", "is", "are", "what", "where", "when", "who", "how", "why"}
              words = re.findall(r'\b\w+\b', text.lower())
              keywords = [word for word in words if word not in common_words and len(word) > 2]
              return keywords[:5]  # Limit to top 5 keywords
      
          def _search_memory(self, keywords: List[str], question: str) -> List[tuple]:
              """Search memory for relevant observations."""
              if not keywords:
                  # Fallback: search for any mention of question words
                  search_terms = question.split()
              else:
                  search_terms = keywords
              
              # Build OR query for all search terms
              placeholders = ",".join(["?"] * len(search_terms))
              query = f"""
                  SELECT content, topic, tags 
                  FROM observations 
                  WHERE content LIKE '%' || ? || '%'
                  OR topic LIKE '%' || ? || '%'
                  OR tags LIKE '%' || ? || '%'
                  ORDER BY id DESC
                  LIMIT 5
              """
              
              # Execute query for each search term
              all_results = []
              for term in search_terms:
                  cursor = self.db.execute(query, (term, term, term))
                  all_results.extend(cursor.fetchall())
              
              # Remove duplicates while preserving order
              seen = set()
              unique_results = []
              for result in all_results:
                  if result not in seen:
                      seen.add(result)
                      unique_results.append(result)
              
              return unique_results
      
          def _format_results(self, results: List[tuple]) -> str:
              """Format search results into a readable string."""
              if not results:
                  return "No relevant information found."
              
              formatted = []
              for i, (content, topic, tags) in enumerate(results, 1):
                  parts = [f"{i}. {content}"]
                  if topic:
                      parts.append(f"   Topic: {topic}")
                  if tags:
                      parts.append(f"   Tags: {tags}")
                  formatted.append("\n".join(parts))
              
              return "\n\n".join(formatted)
    ''',
    'round1_score': 0.0,
    'round2_output': 'The access code for Project Zephyr is **DELTA-7742**.',
    'round2_score': 1.0,
  })
# ---
# name: test_retrieved_memory_answer
  dict({
    'step1_output': '''
      ```json
      {
          "raw": "capital of France"
      }
      ```
    ''',
    'step1_prompt': '''
      Given the following question, generate a query to retrieve relevant memory.
      
      Question: What is the capital of France?
      
      The query must be a JSON object matching this schema:
      // Query: Raw text query to retrieve from memory.
      {
        "raw": "..."  // str, The query text to search for
      }
      
      Respond with the JSON only.
    ''',
    'step2_output': 'Based on the retrieved memory, the capital of France is Paris.',
    'step2_prompt': '''
      <retrieved_memory>
      The capital of France is Paris.
      </retrieved_memory>
      
      Based on the above memory and the original question, provide your answer.
    ''',
  })
# ---
# name: test_runtime_violation_fix_oversized_read
  dict({
    'fixed_code': '''
      from dataclasses import dataclass, field
      from typing import Optional, List
      import sqlite3
      import chromadb
      import json
      import hashlib
      from datetime import datetime
      
      
      @dataclass
      class Observation:
          raw: str = field(metadata={"description": "The raw observation text to store in memory"})
          timestamp: Optional[str] = field(default=None, metadata={"description": "Optional timestamp of the observation"})
          tags: List[str] = field(default_factory=list, metadata={"description": "Optional tags for categorizing the observation"})
      
      
      @dataclass
      class Query:
          search_text: str = field(metadata={"description": "Text to search for in memory"})
          max_results: int = field(default=5, metadata={"description": "Maximum number of results to return"})
          tags_filter: Optional[List[str]] = field(default=None, metadata={"description": "Optional tags to filter results by"})
      
      
      class Memory:
          def __init__(self, toolkit):
              self.toolkit = toolkit
              self.store: List[str] = []
              
              # Initialize database tables
              self._init_db()
              
              # Initialize ChromaDB collection
              self.chroma_client = toolkit.chroma
              self.collection = self.chroma_client.create_collection(
                  name="memory_embeddings",
                  metadata={"hnsw:space": "cosine"}
              )
              
              self.toolkit.logger.debug("Memory system initialized")
      
          def _init_db(self):
              """Initialize SQLite database tables"""
              cursor = self.toolkit.db.cursor()
              cursor.execute("""
                  CREATE TABLE IF NOT EXISTS observations (
                      id TEXT PRIMARY KEY,
                      raw TEXT NOT NULL,
                      timestamp TEXT,
                      tags TEXT,
                      created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP
                  )
              """)
              self.toolkit.db.commit()
              self.toolkit.logger.debug("Database tables initialized")
      
          def _generate_id(self, text: str) -> str:
              """Generate a unique ID for an observation"""
              return hashlib.sha256(text.encode()).hexdigest()[:16]
      
          def write(self, observation: Observation) -> None:
              """Store information in memory"""
              try:
                  # Generate unique ID
                  obs_id = self._generate_id(observation.raw)
                  
                  # Store in SQLite
                  cursor = self.toolkit.db.cursor()
                  cursor.execute("""
                      INSERT OR REPLACE INTO observations (id, raw, timestamp, tags)
                      VALUES (?, ?, ?, ?)
                  """, (
                      obs_id,
                      observation.raw,
                      observation.timestamp or datetime.now().isoformat(),
                      json.dumps(observation.tags)
                  ))
                  self.toolkit.db.commit()
                  
                  # Store embedding in ChromaDB
                  self.collection.add(
                      documents=[observation.raw],
                      metadatas=[{
                          "id": obs_id,
                          "timestamp": observation.timestamp or datetime.now().isoformat(),
                          "tags": json.dumps(observation.tags)
                      }],
                      ids=[obs_id]
                  )
                  
                  self.toolkit.logger.debug(f"Observation written with ID: {obs_id}")
                  
              except Exception as e:
                  self.toolkit.logger.debug(f"Error writing observation: {str(e)}")
                  raise
      
          def read(self, query: Query) -> str:
              """Retrieve relevant information from memory"""
              try:
                  # Search in ChromaDB
                  results = self.collection.query(
                      query_texts=[query.search_text],
                      n_results=min(query.max_results, 10),
                      where={"tags": {"$contains": query.tags_filter[0]}} if query.tags_filter else None
                  )
                  
                  if not results['documents'] or not results['documents'][0]:
                      return "No relevant information found."
                  
                  # Format results
                  formatted_results = []
                  for i, doc in enumerate(results['documents'][0]):
                      metadata = results['metadatas'][0][i] if results['metadatas'] else {}
                      formatted_results.append(
                          f"Result {i+1}:\n"
                          f"Content: {doc[:200]}...\n"
                          f"ID: {metadata.get('id', 'N/A')}\n"
                          f"Tags: {metadata.get('tags', '[]')}\n"
                      )
                  
                  # Join results and ensure length limit
                  response = "\n---\n".join(formatted_results)
                  
                  # Enforce 1000 character limit
                  if len(response) > 1000:
                      response = response[:997] + "..."
                      
                  self.toolkit.logger.debug(f"Query processed, returning {len(response)} characters")
                  return response
                  
              except Exception as e:
                  self.toolkit.logger.debug(f"Error reading memory: {str(e)}")
                  return f"Error retrieving information: {str(e)}"
    ''',
    'runtime_violation': 'memory.read() returned 5000 chars (limit: 1000)',
  })
# ---
# name: test_toolkit_llm_completion
  dict({
    'output': '5',
    'prompt': 'What is 2 + 3? Answer with just the number.',
  })
# ---
